Added landing page's controller to serve the landing page, made changes to index.handlebars for the landing page, added directory links to main.handlebars, extremely minimal styling in landing_style.css, and firebase authentication done on the front end, all stored in authentication.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-		<title>Student Skill Swap</title>
-	</head>
-	<body>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+	<link rel="stylesheet" href="/css/landing_style.css" type="text/css" />
+	<title>Student Skill Swap</title>
+</head>
+
+<body>
 	<div class="container">
 		{{{ body }}}
 	</div>
-	</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+	<script src="/js/authentication.js" charset="utf-8"></script>
+</body>
 </html>
