--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-md-6">
-    <img src="" alt="landing-image">
+    <img src="/img/apple.svg" alt="landing-image">
   </div>
   <div class="col-md-6">
     <div class="title">
       <h2>Welcome to</h2>
       <h1>Student Skill Swap</h1>
-      <img src="" alt="logo">
+      <img id="logo" src="img/logo.png" alt="logo">
       <h4>An online platform that allows students to trade skills!</h4>
-      <button type="button" name="button">Login with Google</button>
+      <button id="loginButton" type="button" name="button">Login with Google</button>
     </div>
   </div>
 </div>
@@ -28,3 +28,5 @@
     <h4>Tali</h4>
   </div>
 </div>
+
+<button id="logoutButton" type="button" name="button">Log Out</button>
