--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+{{!-- This is the landing page --}}
 <div class="row">
   <div class="col-md-6">
     <img src="/img/apple.svg" alt="landing-image">
