--- a/assets/css/landing_style.css
+++ b/assets/css/landing_style.css
@@ -6,3 +6,13 @@ body{
   width:15%;
   height:15%;
 }
+
+.creators{
+  background-color: #4e638a;
+  padding:20px;
+}
+
+.coder{
+  border-radius: 100%;
+  width:40%;
+}
