--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,2 +1,62 @@
-{{!-- the homepage handlebars will go here --}}
-{{!-- it'll include 4 partials that will be created later --}}
+{{!-- This is the landing page --}}
+
+  
+<div class="container">
+
+  <div class="row" id="logo_line">
+  LOGO LINE
+  </div>
+
+  
+  <div class="row">
+   
+    <div class="col-md-8">
+   		
+    	<div class="row">
+	    	<div class="col-md-6" id="profile_photo">
+	   		PROFILE PHOTO
+	   	    </div>
+
+	    	<div class="col-md-6" id="user_area">
+
+	     	  <div class="row" id="welcome">
+	     	  WELCOME NAME
+	     	  </div>
+
+		      <div class="row" id="your_offer">
+		      YOUR OFFER
+		      </div>
+		      
+		      <div class="row" id="your_request">
+		      YOUR REQUEST
+		      </div>
+		      
+		      <div class="row" id="update_details">
+		      UPDATE DETAILS
+		      </div>
+		    </div>
+		</div>
+
+   	</div>
+
+    <div class="col-md-4" id="right_bar">
+        
+        <div class="row" id="right_bar_tabs">
+	        <div class="col-md-6" id="right_bar_received">
+	        SWAPS RECEIVED
+	        </div>
+	        <div class="col-md-6" id="right_bar_sent">
+	        SWAPS SENT
+	        </div>
+        </div>
+
+    	<div class="row" id="right_bar_listings">
+    	LISTINGS
+    	</div>
+
+
+    </div>
+
+  </div>
+</div>
+
