--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,2 +1,24 @@
 {{!-- this is the handlebars file for the form, that'll allow the user to --}}
 {{!-- enter their offers and requests --}}
+
+
+<div class="container">
+  <form>
+  Skill I need:<br>
+    <select name="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select><br>
+    Skill I can offer:<br>
+    <select name="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select><br>
+
+  <input type="submit">
+</form>
+</div>
