--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -58,5 +58,19 @@
     </div>
 
   </div>
+
+
+  <div class="row" id="main_tabs">
+  	<div class="col-md-3" id="perfect_match">perfect_match</div>
+    <div class="col-md-3" id="offer_match">offer_match</div>
+    <div class="col-md-3" id="request_match">request_match</div>
+    <div class="col-md-3" id="all_services">all_services</div>
+  </div>
+
+  <div class="row" id="main_results">
+  RESULTS
+  </div>
+
+
 </div>
 
