Designing the homepage and re-factoring and splitting the homepage.handlebars file into different partials

--- a/assets/css/landing_style.css
+++ b/assets/css/landing_style.css
@@ -1,16 +1,21 @@
 body{
-  margin-top: 20px;
   text-align: center;
 }
-#logo{
+
+#logo_landing{
   width:15%;
   height:15%;
 }
 
+#greeting{
+  color:#4e638a;
+  margin-bottom: 20px;
+}
 
 .creators{
   background-color: #4e638a;
   padding:20px;
+  color:white;
 }
 
 .coder{
@@ -18,72 +23,10 @@ body{
   width:40%;
 }
 
-#welcome {
-	background-color:aqua;
-	height:50px;
+#login_button{
+  padding:10px;
+  background-color: #529cc4;
+  border:none;
+  color:white;
+  border-radius: 10px;
 }
-
-#profile_photo {
-	background-color:pink;
-	height:200px;
-}
-
-
-#your_offer {
-	background-color:red;
-	height:50px;
-}
-
-#your_request {
-	background-color:green;
-	height:50px;
-}
-
-#update_details {
-	background-color:gray;
-	height:50px;
-}
-
-
-#right_bar {
-	background-color:yellow;
-	height:200px;
-}
-
-#right_bar_tabs {
-	background-color:yellow;
-	height:50px;
-}
-
-#right_bar_received {
-	background-color:brown;
-	height:50px;
-}
-
-#right_bar_sent {
-	background-color:purple;
-	height:50px;
-}
-
-#right_bar_listings{
-	background-color:orange;
-	height:150px;
-}
-
-#logo_line {
-  height:50px;
-  background-color: gray;
-
-}
-
-.col-md-3 {
-	height:50px;
-	background-color: #e7e7e7;
-}
-
-#main_results {
-	height: 400px;
-	background-color: #f9f9f9;
-}
-
-
