--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -6,13 +6,8 @@
     <div class="row" id="welcome">
       <h2>Welcome, {{results.name}}</h2>
     </div>
-    <div class="row" id="your_offer">
-      <p>Your Offers:</p>
-      <h4> Math Tutor, English Tutor</h4>
-    </div>
-    <div class="row" id="your_request">
-      <p>Your Requests:</p>
-      <h4> Physical Trainer, Spanish Tutor</h4>
+   <div class="row" id="update_details">
+      <button type="button" name="button" id="update_button">Update Details</button>
     </div>
     <div class="row" id="update_details">
       <button type="button" name="button" id="update_button">Update Details</button>
