--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,5 +13,7 @@
 	{{{ body }}}
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="/js/authentication.js" charset="utf-8"></script>
+		<script src="/js/exchange_creator.js" charset="utf-8"></script>
+
 </body>
 </html>
