--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -7,7 +7,7 @@
   <form>
   <select name="skills_offer" id="offer">
   {{#each skills}}
-      <option value="{{this.dataValues.skill_name}}">{{this.dataValues.skill_name}}
+      <option value="{{this.dataValues.id}}">{{this.dataValues.skill_name}}
       </option>
   {{/each}}
   </select>
