--- a/views/partials/swapresults.handlebars
+++ b/views/partials/swapresults.handlebars
@@ -1,13 +1,14 @@
 <div class="row">
   <hr>
+  <button id="test">test</button>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="homepage/perfectmatch">Perfect Matches</a></li>
-    <li><a href="homepage/offermatch">Offer Match</a></li>
-    <li><a href="homepage/requestmatch">Request Match</a></li>
-    <li><a href="homepage/allservices">All Services</a></li>
+	<li class="active"><a id="perfectmatch">Perfect Matches</a></li>
+    <li><a id="offermatch">Offer Match</a></li>
+    <li><a id="offersbyskill">All Offers By Skill</a></li>
   </ul>
 </div>
 
 <div class="row" id="main_results">
   RESULTS
 </div>
+
