added post request for login authentication

--- a/assets/css/landing_style.css
+++ b/assets/css/landing_style.css
@@ -27,10 +27,9 @@ body{
 }
 
 #login_button{
-border: none;
-background: none;
+/*border: none;*/
+/*background: none;*/
 cursor: pointer;
-
 }
 
 #landing-image {
