--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-md-6" id="profile_photo">
-    <img src={{userimg}} id="display_picture" alt="">
+    <img src="img/dp-placeholder.gif" id="display_picture" alt="">
   </div>
   <div class="col-md-6" id="user_area">
     <div class="row" id="welcome">
-      <h2>Welcome, {{results.name}}</h2>
+      <h2>Welcome, John Doe</h2>
     </div>
    <div class="row" id="update_details">
       <button type="button" name="button" id="update_button">Update Details</button>
