--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,6 @@
 	<script src="/js/authentication.js" charset="utf-8"></script>
 	<script src="/js/match_display.js" charset="utf-8"></script>
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
-	
-
+	<script src="/js/user_info.js" charset="utf-8"></script>
 </body>
 </html>
