--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-md-6" id="profile_photo">
-    <img src="img/dp-placeholder.gif" id="display_picture" alt="">
+    <img src="" id="display_picture" alt="user picture here">
   </div>
   <div class="col-md-6" id="user_area">
     <div class="row" id="welcome">
-      <h2>Welcome, John Doe</h2>
+      <h2>Welcome, <span id="user_name"></span></h2>
     </div>
    <div class="row" id="update_details">
       <button type="button" name="button" id="update_button">Update Details</button>
     </div>
-    <div class="row" id="update_details">
-      <button type="button" name="button" id="update_button">Update Details</button>
+    <div class="row" id="add_skill">
+      <button type="button" name="button" id="update_button">Add Skill</button>
     </div>
   </div>
 </div>
