--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,10 +1,12 @@
 {{!-- this is the handlebars file for the form, that'll allow the user to --}}
 {{!-- enter their offers and requests --}}
 
+<div id="skill_offer_div">
 
-<h2>SKILL I CAN OFFER (chose one)</h2>
 
-  <form>
+<h2>Skill you want to offer (choose one) :</h2>
+
+<form>
 
   <select name="skills_offer" id="offer">
   {{#each skills}}
@@ -12,16 +14,16 @@
       </option>
   {{/each}}
   </select>
-
-
-<h2>SKILL I NEED (chose as many as you like)</h2>
-
-
-    {{#each skills}}
-
-      <input type="checkbox" id="{{this.dataValues.id}}" value="{{this.dataValues.skill_name}}">{{this.dataValues.skill_name}}<br>
+</div>
+<hr>
+<div id="skill_wanted_div">
+  <h2>Skills you need (chose as many as you like) :</h2>
+  {{#each skills}}
+    <input type="checkbox" id="{{this.dataValues.id}}" value="{{this.dataValues.skill_name}}">{{this.dataValues.skill_name}}<br>
   {{/each}}
 
-<button type="submit" id="signin">Poops</button>
+  <button type="submit" id="signin">Head to my homepage</button>
+</div>
 
-  </form>
+
+</form>
