styled the signin page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,12 +3,13 @@
   <div class="row" id="greeting">
 
     <div class="col-md-6">
-      <img src="/img/logo.png" alt="landing-image" id="landing-image">
+      <img src="/img/apple.svg" alt="landing-image" id="landing-image">
     </div>
 
     <div class="col-md-6">
       <div class="row" id="title_row">
         <div class="title">
+          <img src="/img/logo.png" alt="landing-image" id="logo_landing">
           <h1>Student Skill Swap</h1>
           <h4>Your chores are someone else's passion</h4>
         </div>
