--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -6,11 +6,13 @@
     <div class="row" id="welcome">
       <h2>Welcome, <span id="user_name"></span></h2>
     </div>
-   <div class="row" id="update_details">
-      <button type="button" name="button" id="update_button">Update Details</button>
-    </div>
-    <div class="row" id="add_skill">
-      <button type="button" name="button" id="update_button">Add Skill</button>
+    <div class="row">
+      <div id="update_details">
+         <button  class="homepage_button" type="button" name="button" id="update_button">Update Details</button>
+       </div>
+       <div id="add_skill">
+         <button class="homepage_button" type="button" name="button" id="update_button">Add Skill</button>
+       </div>
     </div>
   </div>
 </div>
