--- a/assets/css/homepage_style.css
+++ b/assets/css/homepage_style.css
@@ -64,3 +64,10 @@
   scroll through content */
 	background-color: #f9f9f9;
 }
+
+.homepage_button{
+  text-align: center;
+  width:50%;
+  padding:10px;
+  margin-top:10px;
+}
