--- a/assets/css/landing_style.css
+++ b/assets/css/landing_style.css
@@ -27,9 +27,10 @@ body{
 }
 
 #login_button{
-/*border: none;*/
-/*background: none;*/
+border: none;
+background: white;
 cursor: pointer;
+border-radius: 10px;
 }
 
 #landing-image {
