--- a/assets/css/signin_style.css
+++ b/assets/css/signin_style.css
@@ -1,3 +1,34 @@
 #skill_offer_div{
   background-color: #4e638a;
+  padding:15px;
+}
+
+#signin{
+  background-color: #4e638a;
+  padding:15px;
+  border: none;
+  border-radius: 10px;
+  color:white;
+  width:50%;
+  margin-bottom: 100px;
+  margin-top: 20px;
+}
+
+.skills_existing{
+  display: inline-block;
+  margin:10px;
+  background-color: #529cc4;
+  color:white;
+  padding:10px;
+  border-radius: 10px;
+}
+
+#skill_title{
+  color:white;
+}
+
+#offer{
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
