svg stuff, woohoo!

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,8 @@
   <div class="row" id="greeting">
 
     <div class="col-md-6">
-      <img src="/img/apple.svg" alt="landing-image" id="landing-image">
+      {{>broom}}
+      {{>iron}}
     </div>
 
     <div class="col-md-6">
