--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,18 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
 	<link rel="stylesheet" href="/css/landing_style.css" type="text/css" />
-		<link rel="stylesheet" href="/css/signin_style.css" type="text/css" />
+	<link rel="stylesheet" href="/css/signin_style.css" type="text/css" />
 	<link rel="stylesheet" href="/css/homepage_style.css" type="text/css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="/css/svg_style.css" type="text/css" />
 	<title>Student Skill Swap</title>
 </head>
 <body>
 	{{{ body }}}
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="/js/authentication.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+	<script src="/js/animation.js" charset="utf-8"></script>
 	<script src="/js/match_display.js" charset="utf-8"></script>
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
 	<script src="/js/user_info.js" charset="utf-8"></script>
