--- a/views/partials/swapresults.handlebars
+++ b/views/partials/swapresults.handlebars
@@ -1,14 +1,13 @@
 <div class="row">
   <hr>
-  <button id="test">test</button>
+  {{!-- <button id="test">test</button> --}}
   <ul class="nav nav-tabs">
-	<li class="active"><a id="perfectmatch">Perfect Matches</a></li>
-    <li><a id="offermatch">Offer Match</a></li>
-    <li><a id="offersbyskill">All Offers By Skill</a></li>
+	<button id="perfectmatch" class="da_tabs"><a>Perfect Matches</a></button>
+    <button id="offermatch" class="da_tabs"><a>Offer Match</a></button>
+    <button id="offersbyskill" class="da_tabs"><a>All Offers By Skill</a></button>
   </ul>
 </div>
 
 <div class="row" id="main_results">
   RESULTS
 </div>
-
