Added file exchange_update.js to handle logic for displaying view and update offer display to user. added file to main.handlebars. added route for update to index.js in controllers. started work on database query for updates - getting all wanteds per user offer

--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -11,7 +11,7 @@
          <button  class="homepage_button" type="button" name="button" id="update_button">Update Details</button>
        </div>
        <div id="add_skill">
-         <button class="homepage_button" type="button" name="button" id="update_button">Add Skill</button>
+         <button class="homepage_button" type="button" name="button" id="add_button">Add Skill</button>
        </div>
     </div>
   </div>
