--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
 	<script src="/js/animation.js" charset="utf-8"></script>
 	<script src="/js/match_display.js" charset="utf-8"></script>
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
+	<script src="/js/exchange_update.js" charset="utf-8"></script>
 	<script src="/js/user_info.js" charset="utf-8"></script>
 </body>
 </html>
