rendering update stuff

--- a/views/updateSkills.handlebars
+++ b/views/updateSkills.handlebars
@@ -4,5 +4,9 @@
 <h1>Welcome User!</h1>
 <h3>Here's a list of your skills:</h3>
 <hr>
-{{!-- each loop with all the users skills --}}
+
+<div id="update_stuff">
+  {{!-- update stuff goes here --}}
+</div>
+
 <button type="button" name="button">Done</button>
