re-directs set up

--- a/views/partials/userinfo.handlebars
+++ b/views/partials/userinfo.handlebars
@@ -7,7 +7,7 @@
       <h2>Welcome, <span id="user_name"></span></h2>
     </div>
     <div class="row">
-      <div id="update_details">
+      <div id="go_to_update">
          <button  class="homepage_button" type="button" name="button" id="update_button">Update Details</button>
        </div>
        <div id="add_skill">
