--- a/views/updateSkills.handlebars
+++ b/views/updateSkills.handlebars
@@ -1,7 +1,8 @@
 <div class="row" id="logo_line">
   {{>header}}
 </div>
-<h1>Welcome User!</h1>
+<h1 id="users_update">Welcome User!</h1>
+{{!-- <button id="update_button" type="button" name="button">Fetch Skills</button> --}}
 <h3>Here's a list of your skills:</h3>
 <hr>
 
@@ -9,4 +10,4 @@
   {{!-- update stuff goes here --}}
 </div>
 
-<button type="button" name="button">Done</button>
+<button id="done_deleting" type="button" name="button">Done</button>
