--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,6 @@
 	<script src="/js/match_display.js" charset="utf-8"></script>
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
 	<script src="/js/exchange_update.js" charset="utf-8"></script>
-	<script src="/js/user_info.js" charset="utf-8"></script>
+	<script src="/js/skills_routing.js" charset="utf-8"></script>
 </body>
 </html>
