--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,8 @@
 <body>
 	{{{ body }}}
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 	<script src="/js/authentication.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
@@ -21,5 +23,6 @@
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
 	<script src="/js/exchange_update.js" charset="utf-8"></script>
 	<script src="/js/skills_routing.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
 </body>
 </html>
