--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/css/signin_style.css" type="text/css" />
 	<link rel="stylesheet" href="/css/homepage_style.css" type="text/css" />
 	<link rel="stylesheet" href="/css/svg_style.css" type="text/css" />
+	<link rel="stylesheet" href="/css/update_style.css" type="text/css" />
 	<title>Student Skill Swap</title>
 </head>
 <body>
