--- a/assets/css/update_style.css
+++ b/assets/css/update_style.css
@@ -11,7 +11,8 @@
 
 .offerbtn{
   padding:10px;
-  background-color: #529cc4;
+  background-color: #6eb510;
+  /*background-color: #529cc4;*/
   border:none;
   color:white;
   font-size: 20px;
@@ -50,9 +51,12 @@
 
 #done_deleting{
   padding:10px;
-  background-color: #def0fa;
-  border:1px solid #4e638a;
+  /*background-color: #def0fa;*/
+  background-color: #b0e36d;
+  border:1px solid #6eb510;
   color:#4e638a;
+  /*color:#6eb510;*/
+  /*font-weight: bold;*/
   font-size: 20px;
   border-radius: 10px;
   width:85%;
