--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
 	<script src="/js/animation.js" charset="utf-8"></script>
 	<script src="/js/match_display.js" charset="utf-8"></script>
-	<script src="../../test/match_display_test.js" charset="utf-8"></script>
+	{{!-- <script src="../../test/match_display_test.js" charset="utf-8"></script> --}}
 	<script src="/js/exchange_creator.js" charset="utf-8"></script>
 	<script src="/js/exchange_update.js" charset="utf-8"></script>
 	<script src="/js/skills_routing.js" charset="utf-8"></script>
