--- a/views/partials/swaplog.handlebars
+++ b/views/partials/swaplog.handlebars
@@ -1,9 +1,28 @@
 <div class="row" id="logs">
   <ul class="nav nav-tabs">
-    <li class="active"><a href="homepage/swapsrecieved">Swaps Recieved</a></li>
-    <li><a href="homepage/swapssent">Swaps Sent</a></li>
+    <li class="active"><a href="">Swaps Recieved</a></li>
+    <li><a href="" id="sent_swaps">Swaps Sent</a></li>
   </ul>
 </div>
 <div class="row" id="listings">
-  Listings
+  <div class="row swap_logs">
+    <img class="col-md-3 swap_image" src="/img/dp-placeholder.gif" alt="">
+    <div class="col-md-9 swap_log_matchcontent">
+      <h3 class="row">Perfect Match</h3>
+      <div class="row">
+        <button class="swap_buttons" type="button" name="button">Accept</button>
+        <button class="swap_buttons" type="button" name="button">Decline</button>
+      </div>
+    </div>
+  </div>
+  <div class="row swap_logs">
+    <img class="col-md-3 swap_image" src="/img/dp-placeholder.gif" alt="">
+    <div class="col-md-9 swap_log_matchcontent">
+      <h3 class="row">Perfect Match</h3>
+      <div class="row">
+        <button class="swap_buttons" type="button" name="button">Accept</button>
+        <button class="swap_buttons" type="button" name="button">Decline</button>
+      </div>
+    </div>
+  </div>
 </div>
